@@ -12,6 +12,9 @@ namespace Kaguya.Core.Server_Files
         public Dictionary<string, int> WarnActions { get; set; }
         public Dictionary<ulong, int> WarnedMembers { get; set; }
         public bool AntiRaid { get; set; }
+        public string AntiRaidPunishment { get; set; }
+        public int AntiRaidSeconds { get; set; }
+        public int AntiRaidCount { get; set; }
         public List<ulong> AntiRaidList { get; set; }
         public List<string> FilteredWords { get; set; }
         public List<ulong> AutoAssignedRoles { get; set; }
@@ -30,7 +33,6 @@ namespace Kaguya.Core.Server_Files
         public ulong LogWhenUserConnectsToVoiceChannel { get; set; }
         public ulong LogWhenUserDisconnectsFromVoiceChannel { get; set; }
         public ulong LogLevelUpAnnouncements { get; set; }
-        public List<string> JoinedUsers { get; set; }
         public bool IsBlacklisted { get; set; }
         public string MostRecentBanReason { get; set; }
         public string MostRecentShadowbanReason { get; set; }
@@ -49,8 +51,10 @@ namespace Kaguya.Core.Server_Files
             AutoAssignedRoles = new List<ulong>();
             AntiRaidList = new List<ulong>();
             AntiRaid = false;
+            AntiRaidSeconds = 0;
+            AntiRaidCount = 0;
+            AntiRaidPunishment = null;
             IsBlacklisted = false;
-            JoinedUsers = new List<string>();
         }
     }
 }
