@@ -27,6 +27,8 @@ Version 1.23
 - Completely removed all NSFW tags except for $n, $n bomb, and $n gif.
     - I will focus on improving these for now. It is simply way too time consuming to manually create tags for thousands of images.
     - They have been removed from the command list.
+- Created a timer where every hour Kaguya will remove servers from the database that the bot is not connected to.
+
 
 Version 1.22.1
 
